@@ -22,7 +22,7 @@ John Heitmann  <jwh1@cs.wustl.edu>
 James Hu <jxh@cs.wustl.edu>
 Prashant Jain <pjain@cs.wustl.edu>
 Vishal Kachroo <vishal@cs.wustl.edu>
-Michael Kircher <mlkirche@mchp.siemens.de>
+Michael Kircher <Michael.Kircher@mchp.siemens.de>
 Yamuna Krishnamurthy <yamuna@cs.wustl.edu>
 Fred Kuhns <fredk@cs.wustl.edu>
 David Levine <levine@cs.wustl.edu>
@@ -1091,7 +1091,7 @@ David Channon <djc@uq.net.au>
 Andy Guy <andy@emory.demon.co.uk>
 Oscar Rodriquez <Oscar.Rodriquez@eln.ericsson.se>
 Jonathan Cano <jcano@mmcnet.com>
-Decamps Alain <Alain.Decamps@PIDPA.be>
+Alain Decamps <Alain.Decamps@PIDPA.be>
 Paul Rubel <prubel@bbn.com>
 Jon Loeliger <jloeliger@chiaro.com>
 Ricardo Chan <ricchan@nortelnetworks.com>
